--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -1,9 +1,9 @@
 # Root logger option
-log4j.rootLogger=DEBUG, console, R
+log4j.rootLogger=INFO, console, R
 
 log4j.logger.java.sql.PreparedStatement=DEBUG, R
 log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.javax.sql.DataSource=INFO
+log4j.logger.javax.sql.DataSource=DEBUG
 log4j.logger.java.sql.Statement=DEBUG, R
 log4j.logger.java.sql.ResultSet=DEBUG, R
 log4j.logger.com.kh=DEBUG, R
@@ -20,3 +20,5 @@ log4j.appender.R.File=D:/keephealthlogs/keephealth-log
 log4j.appender.R.DatePattern = yyyy-MM-dd'.log'
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
+
+log4j.logger.com.kh=DEBUG
