--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, console, R
+log4j.rootLogger=DEBUG, console, R
 
 log4j.logger.java.sql.PreparedStatement=DEBUG, R
 log4j.logger.java.sql.Connection=DEBUG
