--- a/resource/log4j.properties
+++ b/resource/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, console, R
+log4j.rootLogger=INFO, console, R
 
 log4j.logger.java.sql.PreparedStatement=DEBUG, R
 log4j.logger.java.sql.Connection=DEBUG
@@ -22,3 +22,4 @@ log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
 
 log4j.logger.com.kh=DEBUG
+log4j.logger.com.apache=DEBUG
