--- a/resource/jdbc.properties
+++ b/resource/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.130:3306/keephealth?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/keephealth?useUnicode=true&characterEncoding=UTF-8&useSSL=true
 jdbc.user=root
 jdbc.password=Root123
 jdbc.maxPoolSize=20
